[gd_scene load_steps=3 format=3 uid="uid://cr0tal12xa4ah"]

[ext_resource type="Script" path="res://Level/Available_birds.gd" id="1_1mhy3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71d3g"]
size = Vector2(400, 1017)

[node name="Available_birds" type="Control"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 3
anchor_left = 0.792
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 399.36
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_1mhy3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 1017.0
mouse_filter = 2
color = Color(0.215686, 0.494118, 0.705882, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_right = 400.0
offset_bottom = 1017.0
horizontal_scroll_mode = 0

[node name="Grid" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
columns = 2

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(200, 508.5)
shape = SubResource("RectangleShape2D_71d3g")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
